--- a/hello.html
+++ b/hello.html
@@ -34,11 +34,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <p> Tu trouveras ci-dessous la liste vers les différentes pages du site :</p> 
     
-  <p><a  class="exercice1" href="https://arthurseche.github.io/eleveclean/exercice1.html"> exercices 1 </a> <br>
-  <p><a class="exercice2" href="https://arthurseche.github.io/eleveclean/exercice2.html"> exercices 2</a> <br>
-    <a href="https://arthurseche.github.io/eleveclean/exercice2.html">Clic exo 2 datalayer	</a><br>
-  <a href="https://arthurseche.github.io/eleveclean/contact.html" class="coucou" > contact </a> <br>
-    <a  class="link_product" href="https://arthurseche.github.io/eleveclean/produit.html" onclick="datalayer.push({'event': 'coucou'});" > produit </a></p>
+  <p><a  class="exercice1" href="https://sri-racha.github.io/exerciceDST/exercice1.html"> exercices 1 </a> <br>
+  <p><a class="exercice2" href="https://sri-racha.github.io/exerciceDST/exercice2.html"> exercices 2</a> <br>
+    <a href="https://sri-racha.github.io/exerciceDST/exercice1.html">Clic exo 2 datalayer	</a><br>
+  <a href="https://sri-racha.github.io/exerciceDST/contact.html" class="coucou" > contact </a> <br>
+    <a  class="link_product" href="https://sri-racha.github.io/exerciceDST/produit.html" onclick="datalayer.push({'event': 'coucou'});" > produit </a></p>
   <p> Bon courage! </p>                                                       
   </div>
   <div class="footer">
