--- a/produit.html
+++ b/produit.html
@@ -44,8 +44,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   Taille : M </p> 
   
   <img src="maillotrennesdomicile.JPG" />
-  <p><a class="achat" href="https://arthurseche.github.io/eleveclean/confirmation.html" > Achetez ce produit </a> <p>
-    <p><a href="https://arthurseche.github.io/eleveclean/hello.html"> homepage </a> <p> 
+  <p><a class="achat" href="https://sri-racha.github.io/exerciceDST/confirmation.html" > Achetez ce produit </a> <p>
+    <p><a href="https://sri-racha.github.io/exerciceDST/hello.html"> homepage </a> <p> 
                                                      
   </div>
   <div class="footer">
