--- a/confirmation.html
+++ b/confirmation.html
@@ -44,7 +44,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h1> Merci pour votre achat ! <h1>
 
   <p> A très vite sur notre site !
-	 <a href="https://sri-racha.github.io/exerciceDST/"> homepage </a>
+	 <a href="https://sri-racha.github.io/exerciceDST/hello.html"> homepage </a>
   </p> 
                                    
   </div>
